Reworked how node get exposed to internet
A framework was introduced to allow more load balancer to
be used to expose node endpoints, also added module to expose
multiple ports per node. For example, orderer node can expose
data port and admin port.

Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/playbooks/network/destroy-port-pvc.yml
+++ b/playbooks/network/destroy-port-pvc.yml
@@ -5,7 +5,9 @@
   gather_facts: no
   connection: local
   tasks:
+  - name: Check load balancer type
+    include_tasks: 'get-hostname.yml'
   - name: Remove port from istio
-    include_tasks: 'remove-gw-port.yml'
+    include_tasks: '{{ LB_TYPE|lower }}/remove-gw-port.yml'
   - name: Remove PVC
-    include_tasks: 'remove-pvc.yml'
+    include_tasks: '{{ LB_TYPE|lower }}/remove-pvc.yml'
