--- a/playbooks/network/destroy-port.yml
+++ b/playbooks/network/destroy-port.yml
@@ -5,5 +5,7 @@
   gather_facts: no
   connection: local
   tasks:
+  - name: Check load balancer type
+    include_tasks: 'get-hostname.yml'
   - name: Remove port from istio
-    include_tasks: 'remove-gw-port.yml'
+    include_tasks: '{{ LB_TYPE|lower }}/remove-gw-port.yml'
