Added nginx support and tools
nginx autodetection
tools to setup kind k8s system

Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/playbooks/network/destroy-port-pvc.yml
+++ b/playbooks/network/destroy-port-pvc.yml
@@ -10,4 +10,4 @@
   - name: Remove port from istio
     include_tasks: '{{ LB_TYPE|lower }}/remove-gw-port.yml'
   - name: Remove PVC
-    include_tasks: '{{ LB_TYPE|lower }}/remove-pvc.yml'
+    include_tasks: 'remove-pvc.yml'
