--- a/config/manager/manager.yaml
+++ b/config/manager/manager.yaml
@@ -44,6 +44,16 @@ spec:
           value: "0"
         - name: ANSIBLE_VERBOSITY_AGENT_OPERATOR_FABRIC_HYPERLEDGER_ORG
           value: "0"
+        - name: MAX_CONCURRENT_RECONCILES_CA_OPERATOR_FABRIC_HYPERLEDGER_ORG
+          value: "1"
+        - name: MAX_CONCURRENT_RECONCILES_ORDERER_OPERATOR_FABRIC_HYPERLEDGER_ORG
+          value: "1"
+        - name: MAX_CONCURRENT_RECONCILES_PEER_OPERATOR_FABRIC_HYPERLEDGER_ORG
+          value: "1"
+        - name: MAX_CONCURRENT_RECONCILES_NODECERT_OPERATOR_FABRIC_HYPERLEDGER_ORG
+          value: "1"
+        - name: MAX_CONCURRENT_RECONCILES_AGENT_OPERATOR_FABRIC_HYPERLEDGER_ORG
+          value: "1"
         securityContext:
           allowPrivilegeEscalation: false
         livenessProbe:
