Improved how the nginx ports are handled
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/playbooks/network/nginx/apply.yml
+++ b/playbooks/network/nginx/apply.yml
@@ -42,19 +42,6 @@
     msg: 'Nginx ingress controller deployment cannot be found, make sure that nginx controller is running.'
   when: nginx_dep.resources|length == 0
 
-- name: Get all the used and usable ports
-  set_fact:
-    used_ports: "{{ nginx_svc.spec.ports | map(attribute='port') | list | map('string') | list }}"
-    all_ports: "{{ lookup('sequence', 'start=31000 end=32000', wantlist=True) }}"
-
-- name: Find available ports
-  set_fact:
-    usable_port: "{{ (all_ports | difference(used_ports)) }}"
-
-- name: Allocate new ports
-  set_fact:
-    EXT_PORTS: "{{ usable_port[0:(TARGET_PORTS|length)] }}"
-
 - name: Check the config map for nginx tcp services
   community.kubernetes.k8s_info:
     name: 'fabric-tcp-services'
@@ -76,9 +63,30 @@
       merge_type: strategic-merge
       definition: "{{ lookup('template', 'templates/deployment_def.j2')|from_yaml }}"
 
+- name: Check the config map once more
+  community.kubernetes.k8s_info:
+    name: 'fabric-tcp-services'
+    namespace: '{{ nginx_svc.metadata.namespace }}'
+    api_version: 'v1'
+    kind: ConfigMap
+  register: theconfigmap
+
 - name: Update the configmap
   when: (theconfigmap.resources|length) == 1
   block:
+  - name: Get all the used and usable ports
+    set_fact:
+      used_ports: "{{ theconfigmap.resources[0].data | default({}) | dict2items | flatten | list | map(attribute='key') | list | map('string') | list }}"
+      all_ports: "{{ lookup('sequence', 'start=31000 end=32000', wantlist=True) }}"
+
+  - name: Find available ports
+    set_fact:
+      usable_port: "{{ (all_ports | difference(used_ports)) }}"
+
+  - name: Allocate new ports
+    set_fact:
+      EXT_PORTS: "{{ usable_port[0:(TARGET_PORTS|length)] }}"
+
   - name: Check if the fabric service has been in the configmap
     set_fact:
       served: "{{ theconfigmap.resources[0].data| default({}) | dict2items | flatten | map(attribute='value') | list }}"
