--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -5,4 +5,5 @@ resources:
 - operator_v1alpha1_peer.yaml
 - operator_v1alpha1_nodecert.yaml
 - operator_v1alpha1_agent.yaml
+- operator_v1alpha1_chaincode.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
