--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -7,4 +7,5 @@ resources:
 - bases/operator.fabric.hyperledger.org_peers.yaml
 - bases/operator.fabric.hyperledger.org_nodecerts.yaml
 - bases/operator.fabric.hyperledger.org_agents.yaml
+- bases/operator.fabric.hyperledger.org_chaincodes.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
