Added console operator
Signed-off-by: Tong Li <litong01@us.ibm.com>

--- a/config/crd/kustomization.yaml
+++ b/config/crd/kustomization.yaml
@@ -8,4 +8,5 @@ resources:
 - bases/operator.fabric.hyperledger.org_nodecerts.yaml
 - bases/operator.fabric.hyperledger.org_agents.yaml
 - bases/operator.fabric.hyperledger.org_chaincodes.yaml
+- bases/operator.fabric.hyperledger.org_consoles.yaml
 #+kubebuilder:scaffold:crdkustomizeresource
