--- a/config/samples/kustomization.yaml
+++ b/config/samples/kustomization.yaml
@@ -6,4 +6,5 @@ resources:
 - operator_v1alpha1_nodecert.yaml
 - operator_v1alpha1_agent.yaml
 - operator_v1alpha1_chaincode.yaml
+- operator_v1alpha1_console.yaml
 #+kubebuilder:scaffold:manifestskustomizesamples
