--- a/roles/nodecert/defaults/main.yml
+++ b/roles/nodecert/defaults/main.yml
@@ -32,13 +32,20 @@
 #   admin.crt:
 #
 
+# For console node
+#   tls-cert.pem:
+#   tls-key.pem:
+#   adminid: "admin"
+#   adminpw:
+
 # organization name of the node. Should be a dns like string
 # this is a required attribute, if it is empty, the error will occur
 organization: example.com
 
-# the type of node, can be CA, Orderer, or Peer. If it is CA type,
-# the certificate will be either self signed if none exist. If the
-# matching secret already exists, then no secret will be created.
+# the type of node, can be CA, Orderer, Peer or Console. If it is
+# CA or Console type, the certificate will be either self signed
+# if none exist. If the matching secret already exists, then
+# no secret will be created.
 nodeType: CA
 
 # CA cert
