--- a/roles/nodecert/tasks/validation.yml
+++ b/roles/nodecert/tasks/validation.yml
@@ -6,7 +6,7 @@
 - name: Check if the node type is set and valid
   fail:
     msg: "node type must be provided and be one of CA, Orderer or Peer in the request"
-  when: node_type == None or (node_type|trim) == '' or ((node_type|lower) not in ('ca', 'orderer', 'peer'))
+  when: node_type == None or (node_type|trim) == '' or ((node_type|lower) not in ('ca', 'orderer', 'peer', 'console'))
 
 - name: Set mspid and work directory
   set_fact:
